Super minor typo fixes

--- a/slides/week_2/lecture_2.html
+++ b/slides/week_2/lecture_2.html
@@ -727,8 +727,11 @@ Maintained by researchers, usually collected to answer specific questions.</p>
 </section>
 <section id="by-next-wednesday" class="slide level2">
 <h2>By next Wednesday</h2>
-<p>Create a script that loads your data into R and begin preparing your analysis dataset. Make sure you push your code to the class repository before Wednesday’s class so we can start reviewing eachothers code!</p>
-<p>Next Monday, we will cover techniques for data cleaning and data transformations. To help you get started before then, I have added several R scripts from previous project work which demonstrates ways to clean your data (recodes, merges, and transformations).</p>
+<p>Create a script that loads your data into R and begin preparing your analysis dataset. Make sure you push your code to the class repository before Wednesday’s class so we can start reviewing each others’ code!</p>
+</section>
+<section id="next-class" class="slide level2">
+<h2>Next class</h2>
+<p>The next lecture will cover techniques for data cleaning and data transformations. To help you get started before then, I have added several R scripts from previous project work which demonstrates ways to clean your data (recoding, merges, and transformations). If you run into difficulties loading your data into R, please reach out for help.</p>
 
 <img src="prgs.png" class="slide-logo r-stretch"><div class="footer footer-default">
 <p>Pardee RAND</p>
